# mahv

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md
benchmark-dataset/: README  info.json
extras/: get_mask_from_benchmark.py
include/json11/: CMakeLists.txt
src/: choicesHelper.cpp  cvHelper.cpp  gui-test.cpp  mahv.cpp  main.cpp  ncursesHelper.cpp
